further tweaks to css/templates: body background now consistent across page types and content heights (moved bg to <body> itself).  Fixed issues on smaller devices: header text too big, links in post header not clickable

--- a/public/styles/app/_layout.scss
+++ b/public/styles/app/_layout.scss
@@ -2,6 +2,7 @@
   background-color: $gray-lighter;
 }
 
+$screen-xxs-max: 480px;
 // banner image styling
 .tagline {
     text-shadow: 0 0 10px #000;
@@ -19,11 +20,17 @@
 	.title-wrapper {
 		position: absolute;
 		width: 100%;
-		padding-bottom: 30px;
+		padding-bottom: 25px;
 		bottom: 0px;
 		background-color: rgba(0,0,0,0.25);
 		h1 {
+			@media (min-width: $screen-sm-min) {
+				margin-left: -17px;
+			}
 			font-size: 48px !important;
+			@media (max-width: $screen-xxs-max) {
+				font-size: 36px !important;
+			}
 			small strong {
         color: lighten($gray-light, 20%);
 			}
@@ -47,7 +54,6 @@
 	text-shadow: 0 0 20px #000; // increase shadow size!
 }
 
-$screen-xxs-max: 480px;
 // homepage updates
 .updates-list .well {
   padding: 14px;
@@ -183,16 +189,13 @@ $screen-xxs-max: 480px;
 
 // extra styling for re-usable layout
 $header-pad: 18px;
-/* $page-bg-color: $gray-lighter; */
 /* $page-bg-color: #CCC; */
 body {
-	/* background-color: $page-bg-color; */
+  /* background: url(/images/squairy_light.png); */
+  /* background: url(/images/ticks.png); */
+  background: url(/images/shattered_2X.png);
 }
 #body {
-  /* background: url(/images/squairy_light.png); */
-	/* background-color: $page-bg-color; */
-  background: url(/images/shattered_2X.png);
-  /* background: url(/images/ticks.png); */
   @media (min-width: $screen-sm-min) {
 		padding-top: $header-pad;
 		padding-bottom: $header-pad;
@@ -246,7 +249,7 @@ body {
 }
 
 // navbar tweaks for club logo
-body {
+#body {
   background-image: url(/images/lfrc-logo-navbar-hover.gif); // trigger pre-load!
   background-position-y: -50px;                              // out of site...
   background-repeat: no-repeat;
